Added CmdHereAction.